# CG2022-HW-MeshSimplification

./: CMakeLists.txt  CMakeSettings.json  README.md
GLFW/lib/pkgconfig/: glfw3.pc
src/app/: CMakeLists.txt  MeshSimplification.cpp  MeshSimplification.h  Vpair.h  main.cpp
src/tool/: CMakeLists.txt  DisjointSet.h  MutablePriorityQueue.h  OGLResources.cpp  OGLResources.h
